--- a/BenPorath.tex
+++ b/BenPorath.tex
@@ -11,7 +11,7 @@
 %\doublespacing
 
 \begin{abstract}
-\noindent We analyze the Ben-Porath model of human capital accumulations and several of its variations in order to inform researchers on the consequences of their modeling decisions. We begin with the baseline model which builds on the neutrality assumption, i.e. the assumption that investment and human capital enter in a multiplicative way to the production function of human capital. We explore the properties of the earnings function, the specialization period, the features of the particular case where the production function takes a Cobb-Douglas functional form, and the properties of the return to schooling. Then we study the Haley-Rosen specification, a finite horizon version with a particular Cobb-Douglas parameterization. FinalWe also work on a generalization of the Cobb-Douglas case where neutrality is no longer true but depreciation is set to zero. Finally, we work on the Shenshinski specification, a general Cobb-Douglas formulation with positive depreciation leasing to bang-bang equlibria solutions.
+\noindent We analyze the Ben-Porath model of human capital accumulation and several of its variations in order to inform researchers on the consequences of their modeling decisions. We begin with the baseline model which builds on the neutrality assumption, i.e. the assumption that investment and human capital enter in a multiplicative way to the production function of human capital. We explore the properties of the earnings function, the specialization period, the features of the particular case where the production function takes a Cobb-Douglas functional form, and the properties of the returns to schooling. Then we study the Haley-Rosen specification, a finite horizon version with a particular Cobb-Douglas parameterization. We also work on a generalization of the Cobb-Douglas case where neutrality is no longer true, but depreciation is set to zero. Finally, we work on the Shenshinski specification, a general Cobb-Douglas formulation with positive depreciation leading to bang-bang equlibria solutions.
 \end{abstract}
 
 \input{Sections/Introduction}
