--- a/BenPorath.tex
+++ b/BenPorath.tex
@@ -1,8 +1,8 @@
 %Input preamble, math commands, environments, etc. from a saingle file. 
-\input{HelperFiles/BenPorathcopy}
+\input{HelperFiles/BenPorath}
 \begin{document}
 
-\title{Human Capital Accumulation and Earnings Dynamics over the Life Cycle: Lessons from the Ben-Porath Model}
+\title{Human Capital Accumulation and Earnings Dynamics over the Life Cycle: the Ben-Porath Model and beyond}
 \author{Jorge Luis Garc\'{i}a\thanks{Department of Economics, The University of Chicago (jorgelgarcia@uchicago.edu).} \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \
  \ \ \ \ \ \ \ \ \ James J. Heckman\thanks{The University of Chicago; American Bar Foundation; University College Dublin (jjh@uchicago.edu).} $^{,}$\thanks{We thank  Will Burgo for outstanding research assistance.}}
 \date{This Draft: \today}
