--- a/BenPorath.tex
+++ b/BenPorath.tex
@@ -4,7 +4,7 @@
 
 \title{Human Capital Accumulation and Earnings Dynamics over the Life Cycle: the Ben-Porath Model and beyond}
 \author{Jorge Luis Garc\'{i}a\thanks{Department of Economics, The University of Chicago (jorgelgarcia@uchicago.edu).} \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \
- \ \ \ \ \ \ \ \ \ James J. Heckman\thanks{The University of Chicago; American Bar Foundation; University College Dublin (jjh@uchicago.edu).} $^{,}$\thanks{We thank  Will Burgo for outstanding research assistance.}}
+ \ \ \ \ \ \ \ \ \ James J. Heckman\thanks{The University of Chicago; American Bar Foundation; Institute for Fiscal Studies, University College London (jjhinfo@uchicago.edu).} $^{,}$\thanks{We thank  Will Burgo for outstanding research assistance.}}
 \date{This Draft: \today}
 \maketitle
 
